--- a/arxiv/2024_03_arxiv.html
+++ b/arxiv/2024_03_arxiv.html
@@ -136,6 +136,60 @@
 <p class="p1">20240315</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.09627">https://arxiv.org/abs/2403.09627</a></span> On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model ****** (SangEun Han, Igor F. Herbut)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.08858">https://arxiv.org/abs/2403.08858</a></span> Quantum Many-Body Scarring in 2 + 1D Gauge Theories with Dynamical Matter</p>
+<br>
+<p class="p1">20240318</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.10509">https://arxiv.org/abs/2403.10509</a></span> Tuneable band topology and optical conductivity in altermagnets **** (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.09890">https://arxiv.org/abs/2403.09890</a></span> Role of many phonon modes on the high-temperature linear-in-T electronic resistivity *** (Sankar Das Sarma, Yi-Ting Tu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.09765">https://arxiv.org/abs/2403.09765</a></span> Perturbative description of high-Tc superconductivity in the Hubbard model via unitary transformation and classical spins<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.09835">https://arxiv.org/abs/2403.09835</a></span> Fermi Liquid near a q=0 Charge Quantum Critical Point ***** (R. David Mayrhofer, Peter W ̈olfle, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.10148">https://arxiv.org/abs/2403.10148</a></span> Disordered non-Fermi liquid fixed point for two-dimensional metals at Ising-nematic quantum critical points ***** (Kyoung-Min Kim, Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2402.15616">https://arxiv.org/abs/2402.15616</a></span> Minimal Models for Altermagnetism **** (Merc`e Roig, Andreas Kreisel, Yue Yu, Brian M. Andersen, Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01376">https://arxiv.org/abs/2211.01376</a></span> Higgs Condensates are Symmetry-Protected Topological Phases: I. Discrete Symmetries ***** (Ruben Verresen, Umberto Borla, Ashvin Vishwanath, Sergej Moroz, Ryan Thorngren)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.09314">https://arxiv.org/abs/2210.09314</a></span> The Gauge Picture of Quantum Dynamics *** (Kevin Slagle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.09951">https://arxiv.org/abs/2403.09951</a></span> SO(n) AKLT Chains as Symmetry Protected Topological Quantum Ground States (Michael Ragone)</p>
+<p class="p2"><br></p>
+<p class="p1">20240319</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.10818">https://arxiv.org/abs/2403.10818</a></span> Orbital magnetic susceptibility of circular graphene nanoribbons studied using tight-binding model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12018">https://arxiv.org/abs/2403.12018</a></span> Exceptional points of any order in a generalized Hatano-Nelson model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.10599">https://arxiv.org/abs/2403.10599</a></span> Quantum memory at nonzero temperature in a thermodynamically trivial system (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.11262">https://arxiv.org/abs/2403.11262</a></span> Understanding Diffusion Models by Feynman’s Path Integral<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.11866">https://arxiv.org/abs/2403.11866</a></span> Out-of-equilibrium scaling of the energy density along the critical relaxational flow after a quench of the temperature (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.10601">https://arxiv.org/abs/2403.10601</a></span> A Classical Chiral Spin-Liquid from Chiral Interactions on the Pyrochlore Lattice (Matthias Vojta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.11588">https://arxiv.org/abs/2403.11588</a></span> Numerical observation of SU(N) Nagaoka ferromagnetism<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.11655">https://arxiv.org/abs/2403.11655</a></span> SU(3) gauge field of magnons in antiferromagnetic skyrmion crystals<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.11218">https://arxiv.org/abs/2403.11218</a></span> Non-Fermi liquid behavior of scattering rate in three-orbital Emery model<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.00027">https://arxiv.org/abs/2311.00027</a></span> Aspects of Non-Relativistic Quantum Field Theories ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.12405">https://arxiv.org/abs/2309.12405</a></span> Measurement-induced phase transition for free fermions above one dimension ***** (Alexander D. Mirlin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/cond-mat/0112270">https://arxiv.org/abs/cond-mat/0112270</a></span> Bosonisation as the Hubbard Stratonovich Transformation *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.10702">https://arxiv.org/abs/2403.10702</a></span> THREE LECTURES ON THE CURCI-FERRARI MODEL<span class="Apple-converted-space"> </span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.11112">https://arxiv.org/abs/2403.11112</a></span> A note on the dimensional regularization and the on-mass-shell renormalization in the two-loop order</p>
+<p class="p2"><br></p>
+<p class="p1">20240320</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12597">https://arxiv.org/abs/2403.12597</a></span> Effects of forward disorder on quasi-1D superconductors (Thierry Giamarchi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12701">https://arxiv.org/abs/2403.12701</a></span> Unraveling the dynamics of magnetization in topological insulator-ferromagnet heterostructures via spin-orbit torque **** (Taekoo Oh, Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12480">https://arxiv.org/abs/2403.12480</a></span> Chiral-symmetric Topological Origin of Nonlinear Fixed Points</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12085">https://arxiv.org/abs/2403.12085</a></span> The Wilson-Fisher Fixed point revisited: importance of the form of the cutoff</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12758">https://arxiv.org/abs/2403.12758</a></span> Strong-coupling critical behavior in three-dimensional lattice Abelian gauge models with charged N-component scalar fields and SO(N) symmetry ***** (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12121">https://arxiv.org/abs/2403.12121</a></span> Characterizing the Entanglement of Anyonic Systems using the Anyonic Partial Transpose (Nico Kirchner, Wonjune Choi, Frank Pollmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12126">https://arxiv.org/abs/2403.12126</a></span> Non-Abelian and Abelian descendants of vortex spin liquid: fractional quantum spin Hall effect in twisted MoTe2 **** (Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.12779">https://arxiv.org/abs/2403.12779</a></span> Quantum Fischer information in a strange metal ***** (Qimiao Si, Fakher F. Assaad, Silke Paschen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.11949">https://arxiv.org/abs/2403.11949</a></span> Higher time-derivative theories from space-time interchanged integrable field theories ****</p>
+<p class="p2"><br></p>
+<p class="p1">20240321</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13516">https://arxiv.org/abs/2403.13516</a></span> Quantum Chaos on Edge ***** (Alexander Altland, Kun Woo Kim, Tobias Micklitz, Maedeh Rezaei, Julian Sonner, Jacobus J. M. Verbaarschot)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13435">https://arxiv.org/abs/2403.13435</a></span> Measurement-only dynamical phase transition of topological and boundary orders in toric code and gauge-Higgs models *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13710">https://arxiv.org/abs/2403.13710</a></span> New opportunities in condensed matter physics for nanoscale quantum sensors ***** (Eugene Demler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13595">https://arxiv.org/abs/2403.13595</a></span> General criterion for non-Hermitian skin effects and Application: Fock space skin effects in many body systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13154">https://arxiv.org/abs/2403.13154</a></span> Vison condensation and spinon confinement in a kagome lattice Z2 spin liquid: A numerical study of a quantum dimer model *** (Kyusung Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13758">https://arxiv.org/abs/2403.13758</a></span> Scale Invariance at the Edge (Gordon W. Semenoff)</p>
+<p class="p2"><br></p>
+<p class="p1">20240322</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13880">https://arxiv.org/abs/2403.13880</a></span> Topological Dipole Insulator ***** (Ho Tat Lam, Jung Hoon Han, Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.13884">https://arxiv.org/abs/2403.13884</a></span> Quantum chaos in the sparse SYK model *** (John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14620">https://arxiv.org/abs/2403.14620</a></span> From Local to Emergent Altermagnetism: Footprints of Free Fermions Band Topology (Bitan Roy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.13156">https://arxiv.org/abs/2311.13156</a></span> Fractonic Quantum Quench in Dipole-constrained Bosons *** (Yun-Tak Oh, Jung Hoon Han, Hyun-Yong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09500">https://arxiv.org/abs/2307.09500</a></span> Exact hole-induced SU(N) flavor-singlets in certain U = ∞ SU(N) Hubbard models (Kyung-Su Kim, Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14533">https://arxiv.org/abs/2403.14533</a></span> Anomaly in open quantum systems and its implications on mixed-state quantum phases</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
