--- a/arxiv/2024_03_arxiv.html
+++ b/arxiv/2024_03_arxiv.html
@@ -58,7 +58,7 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00156">https://arxiv.org/abs/2403.00156</a></span> Pair density wave order in multiband systems ***** (S. Raghu, Yi-Ming Wu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00615">https://arxiv.org/abs/2403.00615</a></span> Superconductivity Mediated by Nematic Fluctuations in Tetragonal FeSe1−xSx (Rafael M. Fernandes,6 and Eduardo H. da Silva Neto)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00062">https://arxiv.org/abs/2403.00062</a></span> Strong non-linear response of strange metals ***** (Serhii Kryhin, Subir Sachdev, Pavel A. Volkov)</p>
-<p class="p2"><a href="https://arxiv.org/abs/2403.02700">https://arxiv.org/abs/2403.02700</a><span class="s2"> Aspects of superconformal symmetry</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.02700">https://arxiv.org/abs/2403.02700</a></span> Aspects of superconformal symmetry</p>
 <p class="p3"><br></p>
 <p class="p1">20240305</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.01974">https://arxiv.org/abs/2403.01974</a></span> Renormalization group for Anderson localization on high-dimensional lattices ***</p>
@@ -190,6 +190,45 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.13156">https://arxiv.org/abs/2311.13156</a></span> Fractonic Quantum Quench in Dipole-constrained Bosons *** (Yun-Tak Oh, Jung Hoon Han, Hyun-Yong Lee)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09500">https://arxiv.org/abs/2307.09500</a></span> Exact hole-induced SU(N) flavor-singlets in certain U = ∞ SU(N) Hubbard models (Kyung-Su Kim, Hosho Katsura)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14533">https://arxiv.org/abs/2403.14533</a></span> Anomaly in open quantum systems and its implications on mixed-state quantum phases</p>
+<br>
+<p class="p1">20240325</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.15050">https://arxiv.org/abs/2403.15050</a></span> Quantum Valley Hall effect without Berry curvature *** (Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14747">https://arxiv.org/abs/2403.14747</a></span> Compressible quantum matter with vanishing Drude weight (Ady Stern, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14752">https://arxiv.org/abs/2403.14752</a></span> Open system dynamics from fundamental Lagrangian</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.15270">https://arxiv.org/abs/2403.15270</a></span> Bipartite Sachdev-Ye Models with Read-Saleur Symmetries (J. Classen-Howes, P. Fendley, A. Pandey, S. A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14851">https://arxiv.org/abs/2403.14851</a></span> Edge currents as probe of topology in twisted cuprate bilayers (Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14754">https://arxiv.org/abs/2403.14754</a></span> Transforming from Kitaev to Disguised Ising Chain: Application to CoNb2O6 (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.14756">https://arxiv.org/abs/2403.14756</a></span> Magnonic Superconductivity (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.00156">https://arxiv.org/abs/2403.00156</a></span> Pair density wave order in multiband systems **** (S. Raghu, Yi-Ming Wu)</p>
+<p class="p2"><br></p>
+<p class="p1">20240326</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.15680">https://arxiv.org/abs/2403.15680</a></span>Magnetic parity violation and Parity-time-reversal-symmetric magnets (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.16103">https://arxiv.org/abs/2403.16103</a></span> Quantum Field Theory of Electrons and Nuclei</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.16978">https://arxiv.org/abs/2403.16978</a></span> Locally Purified Density Operators for Symmetry-Protected Topological Phases in Mixed States *** (Zhen Bi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.16496">https://arxiv.org/abs/2403.16496</a></span> Evidence for a finite-momentum Cooper pair in tricolor d-wave superconducting superlattices (Y. Yanase, Y. Matsuda)</p>
+<p class="p2"><br></p>
+<p class="p1">20240327</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17058">https://arxiv.org/abs/2403.17058</a></span> Origin of competing charge density waves in kagome metal ScV6Sn6 (Sun-Woo Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17050">https://arxiv.org/abs/2403.17050</a></span> Altermagnetism and superconductivity in a multiorbital t-J model (Anjishnu Bose, Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17840">https://arxiv.org/abs/2403.17840</a></span> Negative electronic compressibility in charge islands in twisted bilayer graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17074">https://arxiv.org/abs/2403.17074</a></span> Quantum Liquids: Emergent higher-rank gauge theory and fractons ***** (Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17586">https://arxiv.org/abs/2403.17586</a></span> Critical Behavior of Non-Hermitian Kondo effect in Pseudogap System *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17619">https://arxiv.org/abs/2403.17619</a></span> Linear dynamics and classical tests of the gravitational quantum field theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17393">https://arxiv.org/abs/2403.17393</a></span> Axial Anomalies of Maximally Supersymmetric Tensor Theories **** (Piljin Yi)</p>
+<p class="p2"><br></p>
+<p class="p1">20240328</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.18691">https://arxiv.org/abs/2403.18691</a></span> Building defect conformal field theory from the Sachdev-Ye-Kitaev interactions **** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.18410">https://arxiv.org/abs/2403.18410</a></span> Chiral Virasoro algebra from a single wavefunction (Isaac H. Kim, John McGreevy, Bowen Shi)</p>
+<p class="p2"><br></p>
+<p class="p1">20240329</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.18887">https://arxiv.org/abs/2403.18887</a></span> (2+1)D topological phases with RT symmetry: many-body invariant, classification, and higher order edge modes (Ryohei Kobayashi, Yuxuan Zhang, Yan-Qi Wang, Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.19155">https://arxiv.org/abs/2403.19155</a></span> First Landau Level Physics in Second Moiré Band of 2.1<span class="s2">◦</span> Twisted Bilayer MoTe (Cheong-Eung Ahn, Wonjun Lee, Kunihiro Yananose, Youngwook Kim, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.19601">https://arxiv.org/abs/2403.19601</a></span> Topological Phases and Phase Transitions with Dipolar Symmetry Breaking **** (Zhen Bi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.18840">https://arxiv.org/abs/2403.18840</a></span> Feynman Diagrams as Computational Graphs *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.18897">https://arxiv.org/abs/2403.18897</a></span> Strong-coupling approach to temperature dependence of competing orders of superconductivity: Possible time-reversal symmetry breaking and nontrivial topology</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.00028">https://arxiv.org/abs/2304.00028</a></span> Fracton Self-Statistics *** (Wilbur Shirley, Michael Hermele)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.19520">https://arxiv.org/abs/2403.19520</a></span> Doubly special relativity as a non-local quantum field theory ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.09141">https://arxiv.org/abs/2205.09141</a></span> TOPOLOGICAL PHASES OF UNITARY DYNAMICS: CLASSIFICATION IN CLIFFORD CATEGORY (JEONGWAN HAAH)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
