--- a/arxiv/2024_04_arxiv.html
+++ b/arxiv/2024_04_arxiv.html
@@ -139,6 +139,50 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.11623">https://arxiv.org/abs/2404.11623</a></span> Eight-color chiral spin liquid in the S = 1 bilinear-biquadratic model with Kitaev interactions (Rico Pohle, Nic Shannon, Yukitoshi Motome)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.11654">https://arxiv.org/abs/2404.11654</a></span> Dirac spin liquid as an “unnecessary” quantum critical point on square lattice antiferromagnets ***** (Yunchao Zhang, Xue-Yang Song, T. Senthil)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07119">https://arxiv.org/abs/2301.07119</a></span> Remote detectability from entanglement bootstrap I: Kirby’s torus trick (Bowen Shi, Jin-Long Huang, John McGreevy)</p>
+<br>
+<p class="p1">20240422</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.12429">https://arxiv.org/abs/2404.12429</a></span> Effective light-induced Hamiltonian for atoms with large nuclear spin</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.13029">https://arxiv.org/abs/2404.13029</a></span> Quantum Spacetimes from General Relativity</p>
+<p class="p2"><br></p>
+<p class="p1">20240423</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.13123">https://arxiv.org/abs/2404.13123</a></span> Gauged Gaussian PEPS - A High Dimensional Tensor Network Formulation for Lattice Gauge Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.13761">https://arxiv.org/abs/2404.13761</a></span> Dumbbell Fermions and Fermi-Pauli Duality (Tom Banks)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14079">https://arxiv.org/abs/2404.14079</a></span> Dynamical scaling and Planckian dissipation due to heavy-fermion quantum criticality **** (Seung-Sup B. Lee, Gabriel Kotliar, Jan von Delft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14404">https://arxiv.org/abs/2404.14404</a></span> Multipolar Skyrmion Crystals in Non-Kramers Doublet Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.11706">https://arxiv.org/abs/2308.11706</a></span> Anomalies of Non-Invertible Symmetries in (3+1)d (Clay Co ́rdova, Po-Shen Hsin, Carolyn Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.13107">https://arxiv.org/abs/2404.13107</a></span> Supergeometric Approach to Quantum Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2310.12610">https://arxiv.org/abs/2310.12610</a></span> Fracton gauge fields from higher-dimensional gravity ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.08670">https://arxiv.org/abs/2309.08670</a></span> Trace Anomaly of Weyl Fermions via the Path Integral</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.13221">https://arxiv.org/abs/2404.13221</a></span> INTEGRABILITY AND COMBINATORICS</p>
+<p class="p2"><br></p>
+<p class="p1">20240424</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14518">https://arxiv.org/abs/2404.14518</a></span> Effective Field Theory for Spontaneously Broken Symmetry *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14762">https://arxiv.org/abs/2404.14762</a></span> Dynamical properties of Fermi-Fermi mixtures of dipolar and non-dipolar atoms</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14538">https://arxiv.org/abs/2404.14538</a></span> Designing open quantum systems with known steady states: Davies generators and beyond (Jinkang Guo, Oliver Hart, Chi-Fang Chen, Aaron J. Friedman, Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14481">https://arxiv.org/abs/2404.14481</a></span> Symmetry fractionalization and duality defects in Maxwell theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14611">https://arxiv.org/abs/2404.14611</a></span> Fermionic tensor network methods</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14788">https://arxiv.org/abs/2404.14788</a></span> Digital Quantum Simulation for Spectroscopy of Schwinger Model **** (Dongwook Ghim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.14515">https://arxiv.org/abs/2404.14515</a></span> Shot noise in coupled electron-boson systems (Shouvik Sur, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.04045">https://arxiv.org/abs/2201.04045</a></span> Raman response and shear viscosity in the non-Fermi liquid phase of Luttinger semimetals (Ipsita Mandal, Hermann Freire)</p>
+<p class="p2"><br></p>
+<p class="p1">20240425</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.15866">https://arxiv.org/abs/2404.15866</a></span> Renormalization group of topological scattering networks ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.15658">https://arxiv.org/abs/2404.15658</a></span> Neural network-based recognition of multiple nanobubbles in graphene (Ara Go)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.15529">https://arxiv.org/abs/2404.15529</a></span> Path integral approach to bosonisation and nonlinearities in exciton-polariton systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.15907">https://arxiv.org/abs/2404.15907</a></span> Tricriticality in 4D U(1) Lattice Gauge Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.15844">https://arxiv.org/abs/2404.15844</a></span> Partial Renormalization of Quasiparticle Interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.15924">https://arxiv.org/abs/2404.15924</a></span> Emergent Topological Semimetal **** (Q. Si, S. Paschen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.15456">https://arxiv.org/abs/2404.15456</a></span> Gauge Invariance through Gauge Fixing ****</p>
+<p class="p2"><br></p>
+<p class="p1">20240426</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16383">https://arxiv.org/abs/2404.16383</a></span> Euler band topology in spin-orbit coupled magnetic systems (Seung Hun Lee, Yuting Qian, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16360">https://arxiv.org/abs/2404.16360</a></span> Preparing matrix product states via fusion: constraints and extensions *** (David T. Stephen, Oliver Hart)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16753">https://arxiv.org/abs/2404.16753</a></span> Classifying One-Dimensional Quantum States Prepared by a Single Round of Measurements *** (Rahul Sahay, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16214">https://arxiv.org/abs/2404.16214</a></span> Dirac Impurity in a Luttinger liquid (Thierry Giamarchi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16099">https://arxiv.org/abs/2404.16099</a></span> Manipulating Majorana zero modes in the spin-1/2 Kitaev ladder (Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16088">https://arxiv.org/abs/2404.16088</a></span> A Generalised Haldane Map from the Matrix Product State Path Integral to the Critical Theory of the J1-J2 Chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16770">https://arxiv.org/abs/2404.16770</a></span> Pseudogap phase as fluctuating pair density wave</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17393">https://arxiv.org/abs/2403.17393</a></span> Axial Anomalies of Maximally Supersymmetric Tensor Theories (Piljin Yi)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
