--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 <!-- NEWS -->
 	<div class="cvitemize"> <a href="#publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Recent News</a> </div>
 	<ul><!--<li>Now I am looking for next position starting in (maybe) September 2023. Please contact me by email (se.han[at]utoronto.ca or sehan.physics[at]gmail.com) if you are interested in me.</li>
-	--></li><li><b>[Mar. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2403.09627" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been posted on arXiv!
+	--><li><b>[Apr. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been accepted on PRD!
 		</li>
+		<li><b>[Mar. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2403.09627" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been posted on arXiv!
+				</li>
 		<li><b>[Mar. 2024]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR24/Session/A07.5" style="font-style: italic;">"Bosonization of Non-Fermi Liquids" (2023/03/04 08:48 AM, Room L100H)</a> at APS march meeting 2024, Minneapolis, Minnesota, USA!
 <!--			<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><img src="img/march2023_ads.png" width="100%" alt="Summary of Talk"></details></div>
 			-->
@@ -114,7 +116,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
 	</details><br>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20240314_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/03/14)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="CV/20240429_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2024/04/29)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -146,7 +148,7 @@ Articles related to my works:
 							</span>
 						<span class="cvperiod"></span></div>
 						<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b> and <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="text-decoration:none;color:var(--font-color)">Igor F. Herbut</a><br>
-					<a href="https://arxiv.org/abs/2403.09627">arXiv:2403.09627</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+					<a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="text-decoration:none;color:var(--font-color)">Accepted in Phys. Rev. D</a> (<a href="https://arxiv.org/abs/2403.09627">arXiv:2403.09627</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 		  <label>
 		    <input type="checkbox">
 		    <!--<img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >-->
