--- a/arxiv/2024_04_arxiv.html
+++ b/arxiv/2024_04_arxiv.html
@@ -183,6 +183,24 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16088">https://arxiv.org/abs/2404.16088</a></span> A Generalised Haldane Map from the Matrix Product State Path Integral to the Critical Theory of the J1-J2 Chain</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.16770">https://arxiv.org/abs/2404.16770</a></span> Pseudogap phase as fluctuating pair density wave</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2403.17393">https://arxiv.org/abs/2403.17393</a></span> Axial Anomalies of Maximally Supersymmetric Tensor Theories (Piljin Yi)</p>
+<br>
+<p class="p1">20240429</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.16445">https://arxiv.org/pdf/2404.16445</a></span> Wavefunction collapse driven by non-Hermitian disturbance</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.17555">https://arxiv.org/pdf/2404.17555</a></span> Ferrimagnetism of ultracold fermions in a multi-band Hubbard system *** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.17504">https://arxiv.org/pdf/2404.17504</a></span> Phase diagram of generalized XY model using tensor renormalization group</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.17087">https://arxiv.org/pdf/2404.17087</a></span> Finite-Depth Preparation of Tensor Network States from Measurement **** (Rahul Sahay, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.17233">https://arxiv.org/pdf/2404.17233</a></span> Time-Reversal Anomalies of QCD3 and QED3 (Po-Shen Hsin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.17239">https://arxiv.org/pdf/2404.17239</a></span> Broken time reversal symmetry vestigial state for a two-component superconductor in two spatial dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.16935">https://arxiv.org/pdf/2404.16935</a></span> Disentangling spin excitation continua in classical and quantum magnets using 2D nonlinear spectroscopy (Emily Z. Zhang, Ciar ́an Hickey, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.17001">https://arxiv.org/pdf/2404.17001</a></span> Higgs Phases and Boundary Criticality in memoriam Peter Higgs ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2308.10903">https://arxiv.org/pdf/2308.10903</a></span> Phase transitions out of quantum Hall states in moiré materials **** (Xue-Yang Song, Ya-Hui Zhang, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2302.05060">https://arxiv.org/pdf/2302.05060</a></span> Chiral spin liquid in a Z3 Kitaev model (Meng Cheng)</p>
+<p class="p2"><br></p>
+<p class="p1">20240430</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.17635">https://arxiv.org/pdf/2404.17635</a></span> Charge density-waves with non-trivial orbital textures in rare earth tritellurides (Rafael M. Fernandes, Jennifer Cano)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2404.18073">https://arxiv.org/pdf/2404.18073</a></span> Charge and spin density wave orders in field-biased Bernal bilayer graphene (Zhiyu Dong, Patrick A. Lee, Leonid Levitov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2402.09331">https://arxiv.org/pdf/2402.09331</a></span> Tuning to the Edge of the Abyss in SU(5) *** (Howard Georgi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/pdf/2401.06847">https://arxiv.org/pdf/2401.06847</a></span> An alternative to perturbative renormalization in 3+1 dimensional field theories ***</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
